// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getProductList should return 500 if db throws 1`] = `
Object {
  "body": "{\\"error\\":{\\"message\\":\\"Couldn't load products from DB\\"}}",
  "headers": Object {
    "Access-Control-Allow-Credentials": true,
    "Access-Control-Allow-Origin": "*",
  },
  "statusCode": 500,
}
`;

exports[`getProductList should return product list 1`] = `
Object {
  "body": "{
  \\"items\\": [
    {
      \\"id\\": \\"1\\"
    },
    {
      \\"id\\": \\"2\\"
    }
  ]
}",
  "headers": Object {
    "Access-Control-Allow-Credentials": true,
    "Access-Control-Allow-Origin": "*",
  },
  "statusCode": 200,
}
`;
